--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
                             <useUniqueVersions>false</useUniqueVersions>
-                            <mainClass>org.jax.npi.Main</mainClass>
+                            <mainClass>org.jax.npi.NarrowPeakInter</mainClass>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
                     </archive>
@@ -172,7 +172,7 @@
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>org.jax.npi.Main</mainClass>
+                            <mainClass>org.jax.npi.NarrowPeakInter</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -200,7 +200,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.jax.npi.Main</mainClass>
+                                    <mainClass>org.jax.npi.NarrowPeakInter</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
